# Violet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile.toml  README.md  ToDo.md  build.rs  debug.sh  log.txt  rust-toolchain  trace
.cargo/: config  config.toml
app/sample/: Cargo.toml  Dockerfile  run.sh
app/sample/.cargo/: config.toml
app/sample/src/: main.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/driver/arch/rv32/: mod.rs
kernel/src/driver/arch/rv32/csr/: mie.rs
kernel/src/driver/arch/rv64/: boot.rs  exc.rs  mod.rs
kernel/src/driver/arch/rv64/csr/: hedeleg.rs  hstatus.rs  hvip.rs  mie.rs  mip.rs  mod.rs  mstatus.rs  mtvec.rs  satp.rs  scause.rs  sstatus.rs  stvec.rs  vsatp.rs  vscause.rs  vsie.rs  vsip.rs  vstvec.rs
kernel/src/driver/arch/rv64/mm/: mod.rs  sv39.rs  sv48.rs
kernel/src/driver/arch/rv64/mmu/: mod.rs  sv39.rs
kernel/src/driver/board/sifive_u/: plic.rs  uart.rs
kernel/src/driver/traits/: intc.rs  mod.rs  serial.rs  timer.rs
kernel/src/driver/traits/arch/: riscv.rs
kernel/src/driver/traits/arch/riscv/: mod.rs
kernel/src/driver/traits/cpu/: mmu.rs
kernel/src/environment/: qemu.rs
kernel/src/environment/traits/: cpu.rs  intc.rs  mod.rs  serial.rs
kernel/src/kernel/: init_calls.rs  minimum_allocator.rs  mod.rs
kernel/src/system/hypervisor/: mm.rs  mod.rs
kernel/src/system/hypervisor/virtdev/: vplic.rs
thread/vshell/: Cargo.toml
thread/vshell/src/: lib.rs
violet/: Cargo.toml  qemu_virt.ld  test.sh
violet/.cargo/: config.toml
violet/class/: Cargo.toml
violet/class/src/: irq.rs  lib.rs  timer.rs
violet/class/src/resource/: mod.rs  stdin.rs  stdout.rs
violet/kernel/: Cargo.toml
violet/kernel/src/: driver_manager.rs  lib.rs  minimum_allocator.rs  table.rs
violet/main/: Cargo.toml
violet/main/src/: main.rs  rwlock.rs
violet/src/: build.rs  lib.rs  setting.rs
violet/src/arch/: mod.rs
violet/src/arch/rv32/: boot.rs
violet/src/arch/rv32/csr/: mcause.rs  mepc.rs  mip.rs
violet/src/arch/rv64/: boot.rs  mod.rs  regs.rs  sbi.rs  vscontext.rs
violet/src/arch/rv64/csr/: hcounteren.rs  hedeleg.rs  hgatp.rs  hgeie.rs  hideleg.rs  hie.rs  hip.rs  hstatus.rs  htval.rs  hvip.rs  mcause.rs  mepc.rs  mhartid.rs  mie.rs  mip.rs  mod.rs  mstatus.rs  mtvec.rs  satp.rs  scause.rs  sepc.rs  sie.rs  sip.rs  sscratch.rs  sstatus.rs  stval.rs  stvec.rs  vsatp.rs  vscause.rs  vsepc.rs  vsie.rs  vsip.rs  vsscratch.rs  vsstatus.rs  vstval.rs  vstvec.rs
violet/src/arch/rv64/extension/hypervisor/: mod.rs
violet/src/arch/rv64/instruction/: mod.rs
violet/src/arch/rv64/instruction/csr/: csrrc.rs  csrrci.rs  csrrs.rs  csrrsi.rs  csrrw.rs  csrrwi.rs  mod.rs
violet/src/arch/rv64/instruction/env/: ebreak.rs  ecall.rs  mod.rs
violet/src/arch/rv64/instruction/format/: clformat.rs  csformat.rs  lformat.rs
violet/src/arch/rv64/mmu/: mod.rs  sv39.rs  sv48.rs
violet/src/arch/rv64/trap/: exc.rs  int.rs  mod.rs
violet/src/arch/traits/: context.rs  hypervisor.rs  mmu.rs  mod.rs  registers.rs
violet/src/container/: mod.rs
violet/src/driver/: mod.rs
violet/src/driver/arch/rv64/: boot.rs  exc.rs  hyp.rs  inst.rs  int.rs  mod.rs  regs.rs  sbi.rs  trap.rs  vscontext.rs
violet/src/driver/board/: mod.rs
violet/src/driver/board/sifive_u/: clint_timer.rs  mod.rs  plic.rs  uart.rs
violet/src/driver/traits/: intc.rs  mod.rs  serial.rs  timer.rs
violet/src/driver/traits/cpu/: context.rs  hypervisor.rs  mmu.rs  mod.rs  registers.rs
violet/src/environment/: mod.rs  qemu.rs
violet/src/environment/traits/: cpu.rs  intc.rs  timer.rs
violet/src/kernel/: container.rs  init_calls.rs  mod.rs  panic.rs
violet/src/kernel/dispatcher/: minimal_dispatcher.rs  mod.rs
violet/src/kernel/event/: mod.rs
violet/src/kernel/heap/: minimum_allocator.rs  mod.rs  slab.rs
violet/src/kernel/sched/: fifo.rs  mod.rs
violet/src/kernel/slab_allocator/: heap.rs  mod.rs  slab.rs
violet/src/kernel/syscall/: mod.rs  toppers.rs  vsi.rs
violet/src/kernel/task/: mod.rs
violet/src/kernel/traits/: dispatcher.rs  mod.rs  sched.rs  task.rs
violet/src/resource/: mod.rs
violet/src/system/hypervisor/: mm.rs  mod.rs
violet/src/system/hypervisor/virtdev/: mod.rs  vplic.rs
violet/src/system/vm/: mm.rs  mod.rs  vmem.rs
violet/src/system/vm/vcpu/: mod.rs
violet/src/system/vm/vdev/: mod.rs  vplic.rs
violet/src/system/vm/virtdev/: mod.rs  vplic.rs
violet/src/test/: mod.rs
violet/src/utils/: error.rs  logging.rs  mod.rs
(+295 files in other folders)
