[package]
name = "sample"
version = "0.2.0"
authors = ["nekomaru0510 <yama05rymy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[workspace]
#members = [
#    "../../violet",
#    "../../plugin/vmmode",
#]

[dependencies]
violet = { path = "../../violet" }
vmmode = { path = "../../plugin/vmmode" }
