[package]
name = "vshell"
version = "0.1.0"
authors = ["nekomaru0510 <yama05rymy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std = { version = "0.1.0" }
class = { version = "0.1.0" }
serial = { version = "0.1.0" }
#spin = "0.5.0"
#volatile = "0.2.6"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


