[package]
name = "main"
version = "0.1.0"
authors = ["nekomaru0510 <yama05rymy@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { version = "0.1.0" }
std = { version = "0.1.0" }
vshell = { version = "0.1.0" }
entry = { version = "0.1.0" }

#[dependencies.lazy_static]
#version = "1.0"
#features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.25"